2020-04-06  Jay Berkenbilt  <ejb@ql.org>

	* Source-level incompatibility: remove QUtil::srandom. There was
	no reason to ever call this, and it didn't do anything unless
	insecure random number generation was compiled in, which it is not
	by default. If you were calling this, just remove the call because
	it wasn't doing anything anyway.

	* Add openssl crypto provider, contributed by Dean Scarff. This
	provider is implemented using OpenSSL and also works with
	BoringSSL.

2020-04-04  Jay Berkenbilt  <ejb@ql.org>

	* Add a new provideStreamData method for StreamDataProvider that
	allows a success code to be returned and that accepts the
	suppress_warnings and will_retry methods. This makes it possible
	to have a StreamDataProvider call pipeStreamData and propagate its
	results back. This change allows better error handling and
	recovery when objects are copied from other files and when
	"immediate copy from" is enabled.

	* When copying foreign streams with immediateCopyFrom set, the
	same type of recovery from streams with filtering errors is
	performed as when dealing with streams in the original input. This
	could happen, for example, if you are using the --pages option to
	take pages from another file and that file has errors in it.

	* Add a new version of QPDFObjectHandle::pipeStreamData whose
	return value indicates overall success or failure rather than
	whether nor not filtering was attempted. It should have always
	been this way. This change was done in a backward-compatible
	fashion. Previously existing pipeStreamData methods' return values
	mean the same as always.

	* Add "objectinfo" section to json output. In this release,
	information about whether each object is a stream or not is
	provided. There's otherwise no way to tell conclusively from the
	json output. Over time, other computed information about objects
	may be added here.

	* Add new option --remove-unreferenced-resources that takes auto,