@@ -15,6 +15,8 @@ class QPDFCrypto_gnutls: public QPDFCryptoImpl
     QPDF_DLL
     virtual ~QPDFCrypto_gnutls();
 
+    virtual void provideRandomData(unsigned char* data, size_t len);
+
     virtual void MD5_init();
     virtual void MD5_update(unsigned char const* data, size_t len);
     virtual void MD5_finalize();
